<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/app_background" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="kristianseng.easynav.SettingsActivity"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_updatefreq"
                android:id="@+id/updateFrequencyLabelTextView"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_below="@+id/updateFrequencyLabelTextView"
                android:id="@+id/updateFrequencyEditText"
                android:textColor="@color/colorHighlight"
                android:padding="15dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_updatefreq_detail"
                android:id="@+id/updateFrequencyDetailTextView"
                android:layout_below="@+id/updateFrequencyEditText"
                android:textColor="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_metricunits"
                android:id="@+id/metricLabelTextView"
                android:textColor="@color/colorPrimary"
                android:layout_below="@+id/updateFrequencyDetailTextView"
                android:textSize="30sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="2"
                android:scaleY="2"
                android:id="@+id/metricCheckBox"
                android:layout_below="@+id/metricLabelTextView"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_metricunits_detail"
                android:id="@+id/metricDetailTextView"
                android:layout_below="@+id/metricCheckBox"
                android:textColor="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:gravity="center_horizontal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_return"
                android:id="@+id/settingsReturnButton"
                android:background="@drawable/app_container"
                android:drawableLeft="@android:drawable/ic_menu_revert"
                android:drawablePadding="5dp"
                android:textColor="@drawable/app_button_text"
                android:paddingRight="10dp"
                android:paddingLeft="5dp"
                android:onClick="onClickReturn"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/metricDetailTextView" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>