<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/app_background" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="kristianseng.easynav.MainActivity"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_distance"
                android:id="@+id/firstLabelTextView"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/app_container"
                android:padding="5dp"
                android:layout_below="@+id/firstLabelTextView"
                android:id="@+id/firstFrameLayout"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:clickable="true"
                android:onClick="onClickFirstField">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/firstValueTextView"
                    android:textColor="@color/colorHighlight"
                    android:textSize="30sp"
                    android:layout_gravity="center"
                    android:text="@string/empty_field" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_altoffset"
                android:id="@+id/secondLabelTextView"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:layout_below="@+id/firstFrameLayout" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/app_container"
                android:padding="5dp"
                android:id="@+id/secondFrameLayout"
                android:layout_below="@+id/secondLabelTextView"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:clickable="true"
                android:onClick="onClickSecondField">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_field"
                    android:id="@+id/secondValueTextView"
                    android:textColor="@color/colorHighlight"
                    android:textSize="30sp"
                    android:layout_gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bezelFrameLayout"
                android:layout_below="@+id/secondFrameLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bezelImageView"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/bezel"
                    android:contentDescription="@string/bezel_img_description" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bearingValueTextView"
                    android:textColor="@color/colorHighlight"
                    android:textSize="30sp"
                    android:layout_gravity="center"
                    android:text="@string/empty_field" />
            </FrameLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_waypoints"
                android:id="@+id/waypointsButton"
                android:background="@drawable/app_container"
                android:drawableLeft="@android:drawable/ic_menu_mylocation"
                android:drawablePadding="5dp"
                android:textColor="@drawable/app_button_text"
                android:paddingRight="10dp"
                android:paddingLeft="5dp"
                android:onClick="onClickWaypoints"
                android:layout_below="@+id/bezelFrameLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_settings"
                android:id="@+id/settingsButton"
                android:background="@drawable/app_container"
                android:drawableLeft="@android:drawable/ic_menu_preferences"
                android:drawablePadding="5dp"
                android:textColor="@drawable/app_button_text"
                android:paddingRight="10dp"
                android:paddingLeft="5dp"
                android:onClick="onClickSettings"
                android:layout_below="@+id/waypointsButton"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>